<resources>
    <string name="app_name">Droid Cafe</string>
    <string name="intro_text">Droid Desserts</string>
    <string name="choose_a_dessert">Choose a dessert:</string>
    <string name="donuts">Donuts are glazed and sprinkled with candy.</string>
    <string name="ice_cream_sandwiches">Ice cream sandwiches have chocolate wafers and vanilla filling.</string>
    <string name="froyo">FroYo is premium self-serve frozen yogurt.</string>
    <string name="donut_order_message">You ordered a donut.</string>
    <string name="ice_cream_order_message">You ordered an ice cream sandwich.</string>
    <string name="froyo_order_message">You ordered a FroYo.</string>
    <string name="same_day_messenger_service">Same day messenger service</string>
    <string name="next_day_ground_delivery">Next day ground delivery</string>
    <string name="pick_up">Pickup</string>
    <string name="chosen">Chosen</string>
    <string name="nothing_clicked">Nothing Clicked</string>
    <string name="order">Orders</string>
    <string name="status">Status</string>
    <string name="favorites">Favorites</string>
    <string name="title_order_activity">Order Activity</string>
</resources>