<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#FFFFFF">



    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#3F51B5"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        android:textSize="@dimen/text_heading"
        android:textColor="#F6F3F3"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />


    <TextView
        android:id="@+id/oculto"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:visibility="invisible"
        android:text="You ordered a:"
        android:layout_marginBottom="@dimen/text_margin_bottom"
        android:layout_below="@id/toolbar"/>

    <TextView
        android:id="@+id/order_intro_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:textColor="@color/black"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="@dimen/text_margin_top"
        android:layout_marginBottom="@dimen/text_margin_bottom"
        android:text="Choose a delivery method:"
        android:textSize="@dimen/intro_text_size">

    </TextView>

    <RadioGroup
        android:id="@+id/aradio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/order_intro_text"
        android:layout_marginLeft="20dp"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/sameday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/same_day_messenger_service"
            android:textColor="@color/black" />

        <RadioButton
            android:id="@+id/nextday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next_day_ground_delivery"
            android:textColor="@color/black" />

        <RadioButton
            android:id="@+id/pickup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pick_up"
            android:textColor="@color/black" />


    </RadioGroup>



</RelativeLayout>